--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>org.exoplatform.calendar</groupId>
   <artifactId>calendar</artifactId>
-  <version>4.1.x-SNAPSHOT</version>
+  <version>4.1.x-cal-pkg-improv-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>eXo Calendar</name>
   <description>eXo Calendar application</description>
@@ -42,7 +42,7 @@
     <!-- **************************************** -->
     <!-- Project Dependencies                     -->
     <!-- **************************************** -->
-    <org.exoplatform.depmgt.version>9-SNAPSHOT</org.exoplatform.depmgt.version>
+    <org.exoplatform.depmgt.version>9-pkg-improv-SNAPSHOT</org.exoplatform.depmgt.version>
     <!-- JCR Project Dependencies -->
     <org.exoplatform.kernel.version>2.4.x-SNAPSHOT</org.exoplatform.kernel.version>
     <org.exoplatform.core.version>2.5.x-SNAPSHOT</org.exoplatform.core.version>
@@ -52,9 +52,9 @@
     <org.gatein.portal.version>3.5.x-PLF-SNAPSHOT</org.gatein.portal.version>
     <org.gatein.wci.version>2.3.0.Final</org.gatein.wci.version>
     <!-- Platform Project Dependencies -->
-    <org.exoplatform.commons.version>4.1.x-SNAPSHOT</org.exoplatform.commons.version>
-    <org.exoplatform.social.version>4.1.x-SNAPSHOT</org.exoplatform.social.version>
-    <org.exoplatform.platform-ui.version>4.1.x-SNAPSHOT</org.exoplatform.platform-ui.version>
+    <org.exoplatform.commons.version>4.1.x-commons-pkg-improv-SNAPSHOT</org.exoplatform.commons.version>
+    <org.exoplatform.social.version>4.1.x-soc-pkg-improv-SNAPSHOT</org.exoplatform.social.version>
+    <org.exoplatform.platform-ui.version>4.1.x-plfui-pkg-improv-SNAPSHOT</org.exoplatform.platform-ui.version>
     <!-- Platform Project 3rd party Dependencies -->
     <org.exoplatform.doc.doc-style.version>4.1.x-SNAPSHOT</org.exoplatform.doc.doc-style.version>
   </properties>
