--- a/calendar-extension/calendar-extension-config/pom.xml
+++ b/calendar-extension/calendar-extension-config/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>calendar-extension</artifactId>
     <groupId>org.exoplatform.calendar</groupId>
-    <version>4.1.x-SNAPSHOT</version>
+    <version>4.1.x-cal-addon-container-SNAPSHOT</version>
   </parent>
   <artifactId>calendar-extension-config</artifactId>
   <packaging>jar</packaging>
