--- a/calendar-statistics/pom.xml
+++ b/calendar-statistics/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>calendar</artifactId>
     <groupId>org.exoplatform.calendar</groupId>
-    <version>4.1.x-SNAPSHOT</version>
+    <version>4.1.x-cal-addon-container-SNAPSHOT</version>
   </parent>
   <artifactId>calendar-statistics</artifactId>
   <name>eXo Calendar Common Statistics</name>
