--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>org.exoplatform.calendar</groupId>
   <artifactId>calendar</artifactId>
-  <version>4.1.x-SNAPSHOT</version>
+  <version>4.1.x-cal-addon-container-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>eXo Calendar</name>
   <description>eXo Calendar application</description>
@@ -49,12 +49,12 @@
     <org.exoplatform.ws.version>2.3.x-SNAPSHOT</org.exoplatform.ws.version>
     <org.exoplatform.jcr.version>1.15.x-SNAPSHOT</org.exoplatform.jcr.version>
     <!-- GateIn Project Dependencies -->
-    <org.gatein.portal.version>3.5.x-PLF-SNAPSHOT</org.gatein.portal.version>
+    <org.gatein.portal.version>3.5.x-PLF-addon-container-SNAPSHOT</org.gatein.portal.version>
     <org.gatein.wci.version>2.3.0.Final</org.gatein.wci.version>
     <!-- Platform Project Dependencies -->
-    <org.exoplatform.commons.version>4.1.x-SNAPSHOT</org.exoplatform.commons.version>
-    <org.exoplatform.social.version>4.1.x-SNAPSHOT</org.exoplatform.social.version>
-    <org.exoplatform.platform-ui.version>4.1.x-SNAPSHOT</org.exoplatform.platform-ui.version>
+    <org.exoplatform.commons.version>4.1.x-commons-addon-container-SNAPSHOT</org.exoplatform.commons.version>
+    <org.exoplatform.social.version>4.1.x-soc-addon-container-SNAPSHOT</org.exoplatform.social.version>
+    <org.exoplatform.platform-ui.version>4.1.x-plfui-addon-container-SNAPSHOT</org.exoplatform.platform-ui.version>
     <!-- Platform Project 3rd party Dependencies -->
     <org.exoplatform.doc.doc-style.version>4.1.x-SNAPSHOT</org.exoplatform.doc.doc-style.version>
   </properties>
