--- a/calendar-service/pom.xml
+++ b/calendar-service/pom.xml
@@ -169,8 +169,12 @@
       <exclusions>  
         <exclusion>          
           <groupId>javax.servlet</groupId>
-          <artifactId>servlet-api</artifactId>
+          <artifactId>javax.servlet-api</artifactId>
         </exclusion>
+        <exclusion>          
+          <groupId>javax.servlet</groupId>
+          <artifactId>servlet-api</artifactId>
+        </exclusion>	
       </exclusions> 
     </dependency>
     <dependency>
